# burnrate

./: .gitignore  DOCKERHUB.md  Dockerfile  README.md  package-lock.json
.github/workflows/: build.yml  ci.yml  pages.yml  release.yml
HomebrewFormula/: burnrate.rb
apps-script/: Code.gs  README.md
backend/: main.py
backend/models/: database.py  models.py
backend/parsers/: detector.py  federal.py  idfc_first.py  indian_bank.py
backend/routers/: analytics.py  cards.py  categories.py  statements.py  tags.py  transactions.py
backend/services/: analytics.py  categorizer.py  folder_watcher.py  pdf_unlock.py  processing_queue.py  statement_processor.py
docs/: macos-installation.md  release-process.md
frontend-neopop/: index.html
frontend-neopop/src/: App.tsx  neopop.d.ts
frontend-neopop/src/components/: CategoryDonut.tsx  CloseButton.tsx  CommandSearch.tsx  DateRangePicker.tsx  FilterModal.tsx  Navbar.tsx  SetupForm.tsx  StatUpload.tsx  Toast.tsx  TransactionRow.tsx
frontend-neopop/src/contexts/: FilterContext.tsx
frontend-neopop/src/hooks/: useApi.ts
frontend-neopop/src/lib/: api.ts  cardTemplates.ts  types.ts
frontend-neopop/src/pages/: Analytics.tsx  Cards.tsx  Customize.tsx  Dashboard.tsx  SetupWizard.tsx  Transactions.tsx
scripts/: build-macos.sh  build-windows.bat  burnrate.iss  generate-icons.sh  launch.py
site/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
